objects/LogEntry__c.object
<CustomObject>
    <description>Used to record unexpected errors, track down transient issues that can&apos;t be replicated, or store audit information.  See the LogUtils class for functions used to create these records.</description>
    <fields>
        <fullName>AreaName__c</fullName>
        <description>A unique identifier for the location that the log entry was created.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Area Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DEBUG</fullName>
                </value>
                <value>
                    <fullName>ERROR</fullName>
                </value>
                <value>
                    <fullName>FINE</fullName>
                </value>
                <value>
                    <fullName>FINER</fullName>
                </value>
                <value>
                    <fullName>FINEST</fullName>
                </value>
                <value>
                    <fullName>INFO</fullName>
                </value>
                <value>
                    <fullName>NONE</fullName>
                </value>
                <value>
                    <fullName>WARN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RecordId__c</fullName>
        <description>Identifies the record that was associated with the log entry.  This is useful for reporting on the errors related to a specific record.  This is a Text type because the relationship supports all objects.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Log Entry</label>
    <listViews>
        <fullName>All_Log_Entries</fullName>
        <columns>NAME</columns>
        <columns>AreaName__c</columns>
        <columns>Level__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Log Entries</label>
    </listViews>
    <nameField>
        <displayFormat>LOG-{000000000}</displayFormat>
        <label>Log Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Log Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>